--- a/VRChat/55/1139555.html
+++ b/VRChat/55/1139555.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "Fc4Cb3KFcpNt/xK9IoSdZZcq6jBQUv+yBJP3gPo79oc="></script>
+    "fvXbWkUG8kB1MZEeRuVdjVpF//WIJXWqk7+futyQPBE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FakeLightToonShader","description":"Unity用のUnlitシェーダです。\nシーンのライティングに関わらずシェーダで設定したライティングになります。\n\n通常DL版と支援版の内容物は同一です。\n\nこのシェーダはShader Forge（ http://www.acegikmo.com/shaderforge/ ）を使用して作成されました。\n\nReleased under the MIT license.\nhttps://opensource.org/licenses/mit-license.php\n\n導入方法\n１．「FakeLightToon_v1.0.shader」ファイルをUnityの「Assets」フォルダ以下の任意の位置に追加してください。\n２．マテリアルのShaderタブに「FakeLightShader/FakeLightToon_v1.0」が追加されているので選択することで導入が完了します。\n(v1.0はその時のバージョンによって数字が変わります。)\n\nプロパティの説明\n・normal\nノーマルマップを設定できます。使わない場合はNoneのままで大丈夫です。\n\n・step_level\n光の強さに対する影の付け方のしきい値です。値を大きくするほど影の領域が多くなります。\n\n・Albedo\nモデルのカラー情報です。モデルに適用するテクスチャを設定してください。\n\n・Albedo_Color\nAlbedoテクスチャに乗算する色情報です。色味を調整したい場合以外は白にしてください。\n\n・use_Shadow_Albedo\n影色に別のテクスチャを使う場合はチェックを入れてください。\n\n・shadow_Albedo\n影色に使うモデルのカラー情報です。使用する場合はuse_Shadow_Albedoにチェックを入れてください。\n\n・Shadow_Color\n影色に乗算する色情報です。\nuse_Shadow_Albedoにチェックが入ってない場合：\nAlbedoの影部分に色が乗算されます。\nuse_Shadow_Albedoにチェックが入っている場合：\nshadow_Albedoに色が乗算されます。\n\n・Outline_Width\nアウトラインの太さの値です。\n\n・Color_Outline\nアウトラインの色です。\n\n・fake_light_position\n偽の光源の位置情報です。X,Y,Zの値を調節してちょうどよい位置に移動させてください。\n\n・use_rimlight\nリムライトを使う場合はチェックを入れてください。\n\n・rimlight_power\nリムライトの強さの値です。\n\n・rimlight_color\nリムライトの色です。","url":"https://booth.pm/ja/items/1139555","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e1cb2816-75d6-4f1f-9f88-6087b87ed648/i/1139555/00034ca6-4442-4c17-8151-4ec10ec32fd9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Fc4Cb3KFcpNt/xK9IoSdZZcq6jBQUv+yBJP3gPo79oc="></script>
+    nonce="fvXbWkUG8kB1MZEeRuVdjVpF//WIJXWqk7+futyQPBE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -664,7 +664,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
